src/test/ui/issues/issue-46101.stderr
error[E0433]: failed to resolve: partially resolved path in a derive macro
  --> $DIR/issue-46101.rs:3:10
   |
LL | #[derive(Foo::Anything)]
   |          ^^^^^^^^^^^^^ partially resolved path in a derive macro

error: aborting due to previous error

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: aborting due to 2 previous errors

Some errors have detailed explanations: E0433, E0601.
For more information about an error, try `rustc --explain E0433`.
=======
For more information about this error, try `rustc --explain E0433`.
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
